# MCTS

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  main.py  mcts_output.json  pyproject.toml
backend/api/: __init__.py  schemas.py  server.py
backend/core/: prompts.py
backend/core/dts/: __init__.py  aggregator.py  config.py  engine.py  retry.py  tree.py  types.py  utils.py
backend/core/dts/components/: __init__.py  evaluator.py  generator.py  researcher.py  simulator.py
backend/core/mcts/: __init__.py  agent.py  types.py
backend/llm/: __init__.py  client.py  errors.py  tools.py  types.py
backend/services/: __init__.py  dts_service.py
backend/utils/: config.py
frontend/: app.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/config/: ConfigForm.tsx
frontend/src/components/details/: BranchSelector.tsx  ConversationView.tsx  DetailsPanel.tsx  JudgeScores.tsx  ResearchReport.tsx  UsageStats.tsx  index.ts
frontend/src/components/layout/: Dashboard.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/progress/: ActivityLog.tsx  StatsBar.tsx  index.ts
frontend/src/components/tree/: TreeCanvas.tsx  TreeEdge.tsx  TreeNode.tsx  index.ts
frontend/src/components/ui/: badge.tsx  card.tsx  index.ts  progress.tsx  select.tsx  textarea.tsx
frontend/src/hooks/: index.ts  useModels.ts  useWebSocket.ts
frontend/src/lib/: utils.ts
frontend/src/stores/: configStore.ts  index.ts  searchStore.ts  treeStore.ts  uiStore.ts
frontend/src/types/: api.ts  config.ts  index.ts  tree.ts  websocket.ts
scripts/: start_server.bat  start_server.sh
tests/: __init__.py  test_placeholder.py
